# rococo-service-host

./: .dockerignore  .env.example  .gitignore  BREAKING.md  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  env.example.cron  process.py  pyproject.toml  sonar.sh
.github/workflows/: publish-to-docker-hub.yml  sonarqube.yml
.scannerwork/: report-task.txt
child_example/: Dockerfile
child_example/services/: pyproject.toml
child_example/services/child_logging/: __init__.py
child_example/src/service_processors/: __init__.py  service_processor.py
child_example/src/services/: __init__.py
cron_run_at_example/: .env.example  Dockerfile  README.md  processor.py  pyproject.toml
cron_run_at_example/cron_run_at_example/: processor.py
cron_service_example/: .env.example  Dockerfile  README.md  processor.py  pyproject.toml
rococo_service_base/: Dockerfile  use_local_deps_in_toml.py
rococo_svchost/: .env.example  .env.secrets.example  README.md  pyproject.toml
rococo_svchost/rococo_svchost/: process.py
rococo_svchost/rococo_svchost/factories/: __init__.py  config_factory.py  service_processor_factory.py
rococo_svchost/rococo_svchost/models/: __init__.py  processor_info.py
rococo_svchost/rococo_svchost/services/: __init__.py  processor.py
service_example/: .env.example  Dockerfile  README.md  processor.py  pyproject.toml
service_example/service_example/: processor.py
src/: .env.example  Dockerfile  logger.py  process.py  pyproject.toml  version.py
src/factories/: __init__.py  config_factory.py  message_adapter_factory.py  service_processor_factory.py
src/message_factory/: __init__.py  messaging_factory.py
src/processor_factory/: __init__.py  processor_factory.py
src/service_processors/: __init__.py  service_processors.py
src/services/: __init__.py  logging_service_processor.py  processor.py
src/utils/: __init__.py  utils.py
tests/: test_config_factory.py  test_logger.py  test_message.py  test_process.py  test_process_full.py
