[tool.poetry]
name = "src"
version = "0.1.20"
description = ""
authors = ["Matias Garafoni <matias.garafoni@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pytest = "^7.4.3"
rococo = "1.0.34"
schedule = "^1.2.1"
apscheduler = "^3.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
