[tool.poetry]
name = "service-example"
version = "1.0.0"
description = ""
authors = ["Matias Garafoni <matias.garafoni@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.3"
rococo = "^1.0"
rococo-svchost = "^1.0"
# locally you can use: rococo-svchost = { path = "../rococo_svchost/", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"