[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Matias Garafoni <matias.garafoni@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rococo = "^0.1.13"
pytest = "^7.4.3"


[tool.poetry.group.dev.dependencies]
pylint = "^3.0.2"
autopep8 = "^2.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
